added another paragraph

--- a/site-example/index.html
+++ b/site-example/index.html
@@ -9,5 +9,6 @@
     <h1>Hello, World!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptatibus soluta iste aperiam optio? Labore explicabo quae magni, aperiam sequi voluptas quo unde aspernatur vel. Eum fuga a doloremque. Totam.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis, quod voluptate minus tenetur sequi eveniet autem sapiente ipsam minima nam cumque corporis voluptatum voluptates cum ducimus omnis consequuntur qui?</p>
 </body>
 </html>
